--- a/Week 2/Day 3/Sinatra TextApp/views/login.erb
+++ b/Week 2/Day 3/Sinatra TextApp/views/login.erb
@@ -2,7 +2,7 @@
 
 <form action="/login" method="POST">
 	<input type="text" name="username" placeholder="username">
-	<input type="text" name="password" placeholder="password">
+	<input type="password" name="password" placeholder="password">
 
 	<button type="submit">Submit</button>
 </form>
