--- a/Week 4/Day 1/timetracking/app/views/projects/index.html.erb
+++ b/Week 4/Day 1/timetracking/app/views/projects/index.html.erb
@@ -3,9 +3,12 @@
 <ul>
 	<% @projects.each do |project| %>
 		<li>
-			<%= project.name %>
+			<%= link_to project.name, project_path(project.id) %>
 			<%= " - #{project.description}" if project.description.present? %>
 			<%= "is completed" if project.completed? %>
 		</li>
 	<% end %>
 </ul>
+
+<br>
+<%= link_to 'Create a new project', new_project_path %>
