--- a/Week 4/Day 3/auction_site/app/assets/stylesheets/users.scss
+++ b/Week 4/Day 3/auction_site/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.title {
+	width: 100%;
+	margin-top: 30px;
+}
+
+.user {
+	background: white;
+	padding: 20px;
+	margin: 10px;
+	font-size: 20px;
+	text-align: center;
+}
