--- a/Week 4/Day 3/auction_site/app/views/users/index.html.erb
+++ b/Week 4/Day 3/auction_site/app/views/users/index.html.erb
@@ -1,11 +1,15 @@
-<h1>Users</h1>
+<div class="col-lg-12 title">
+	<div class="row">
+		<h1>All Users' Shops</h1>
+	</div>
 
-<ul>
-	<% @users.each do |user| %>
-		<li>
-			<%= link_to user.name, user_path(user.id) %>
-		</li>
-	<% end %>
-</ul>
+	<div class="container-fluid">
+		<% @users.each do |user| %>
+			<div class="row user">
+				<%= link_to user.name, user_products_path(user.id) %>
+			</div>
+		<% end %>
+	</div>
+</div>
 
-<%= link_to 'Add new user', new_user_path %>
+
